syntax = "proto2";

package proto;

option go_package = "./protocol";

service BirdService{
  rpc Create(CreateRequest) returns (CreateReply){}
  rpc Get(GetRequest) returns (GetReply){}
  rpc Change(ChangeRequest) returns (ChangeReply){}
  rpc Delete(DeleteRequest) returns (DeleteReply){}
}

// create

message CreateRequest{
  required string owner = 1;
  required string name = 2;
  required string type = 3;
}

message CreateReply{
  required string message = 1;
}

// get

message GetRequest{
  required string owner = 1;
}

message GetReply{
  required string owner = 1;
  required string name = 2;
  required string type = 3;
}

// change

message ChangeRequest{
  required string owner = 1;
  required string name = 2;
  required string type = 3;
}

message ChangeReply{
  required string message = 1;
}

// delete

message DeleteRequest{
  required string owner = 1;
}

message DeleteReply{
  required string message = 1;
}